--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage":"http://ajitharunai.github.io/Personal Portfolio React Web App",
-  "name": "Personal Portfolio React Web App",
+  "homepage":"http://ajitharunai.github.io/Personal-Portfolio-React-Web-App",
+  "name": "Personal-Portfolio-React-Web-App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
